--- a/parsing/ei_dsp_1724767506971.md
+++ b/parsing/ei_dsp_1724767506971.md
@@ -1,3 +1,3 @@
 Вводный урок по курсу "Python\-Разработчик"Вводный урок по курсу "Python\-Разработчик"Длительность: 9 минут  
 Преподаватель: Денис Пикаев**Вводный урок по курсу**
-![Video](kinescope.io/embed/boyBEnFCpmEkSqo7UP3bzb?)
+![Video](https://kinescope.io/embed/boyBEnFCpmEkSqo7UP3bzb)
