--- a/parsing/ei_dsp_1724767506971.md
+++ b/parsing/ei_dsp_1724767506971.md
@@ -1,3 +1,2 @@
-Вводный урок по курсу "Python\-Разработчик"Вводный урок по курсу "Python\-Разработчик"Длительность: 9 минут  
-Преподаватель: Денис Пикаев**Вводный урок по курсу**
+<div class="t-records" data-tilda-project-id="7672582" data-tilda-root-zone="one" id="allrecords"><div id="app"><div class="tlk-courses"><div class="tlk-lecture"><div class="tlk-lecture__container"><div class="tlk-lecture__title" data-field="tlk-title">Вводный урок по курсу "Python-Разработчик"</div><div class="tlk-lecture__description" data-field="tlk-text">Длительность: 9 минут<br/>Преподаватель: Денис Пикаев</div><div class="tlk-lecture__text-top" data-field="tlk-text"><strong style="background-color: transparent;">Вводный урок по курсу</strong></div><div class="tlk-lecture__video-wrap"><iframe allow="fullscreen; picture-in-picture; encrypted-media;" frameborder="0" scrolling="no" src="https://kinescope.io/embed/boyBEnFCpmEkSqo7UP3bzb?watermark=ivan.milman.arkhangelsk@ya.ru" width="100%"/></div></div></div></div><div class="tlk-userbar"><div class="tlk-userbar__user tlk-userbar__user_scale"><button class="tlk-userbar__user-image tlk-btn_reset" type="button"><svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 60 60"><defs><mask height="60" width="60" x="0" y="0"><g><circle cx="30" cy="30" fill="#fff" r="30"/></g></mask></defs><g><g><circle cx="30" cy="30" fill-opacity="0" r="30"/><g><path class="cls-4" d="M0 0h60v60H0z" fill="#000" fill-opacity=".8"/></g><g><path class="cls-5" d="M46.68 43.83c-2-5.8-6.9-9.69-16.63-9.69s-14.58 3.77-16.84 9.69"/></g><g><circle class="cls-5" cx="30" cy="20.86" r="8.29"/></g></g></g></svg></button></div><div class="tlk-userbar__popup"><div class="tlk-userbar__popup-wrap"><div class="tlk-userbar__popup-content"><div class="tlk-userbar__popup-login"><div class="tlk-userbar__popup-wrap-name"><div class="tlk-userbar__popup-name">
 https://kinescope.io/embed/boyBEnFCpmEkSqo7UP3bzb
